Reorganized code to match main branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,16 +26,17 @@ set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT FluidSimTest)
 
 set(RESOURCES
     # Fluid sim shaders
-    shaders/entry_point.glsl
-    shaders/advection.glsl
-    shaders/divergence.glsl
-    shaders/forces.glsl
-    shaders/jacobi.glsl
-    shaders/projection.glsl
-    # Debug shaders
-    shaders/debug/vertex.glsl
-    shaders/debug/fragment.glsl)
+    shaders/sim/entry_point.glsl
+    shaders/sim/advection.glsl
+    shaders/sim/divergence.glsl
+    shaders/sim/forces.glsl
+    shaders/sim/jacobi.glsl
+    shaders/sim/projection.glsl
+    # Drawing shaders
+    shaders/draw/debug_vertex.glsl
+    shaders/draw/debug_fragment.glsl)
 target_sources(FluidSimTest PRIVATE ${RESOURCES})
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/shaders PREFIX Shaders FILES ${RESOURCES})
 
 foreach(RES ${RESOURCES})
     add_custom_command(
